Transactions table viewport fix
Fixed an issue with the transactions table  oversizing. Table now scales dynamically to fit screen and has its own scrollbar.

--- a/static/styles.css
+++ b/static/styles.css
@@ -80,3 +80,9 @@ body {
     padding-left: 2.5rem; 
     padding-right: 2.5rem;
 }
+
+.table-container {
+    width: 85%;
+    max-height: 70vh;
+    overflow-y: auto;
+}
